fix rendering on small screen

--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ img {
 
 .tech-item-article {
   position: relative;
-  top: -2rem;
+  top: 0.5rem;
   width: 100%;
 }
 
